--- a/.github/workflows/fetch_traffic.yml
+++ b/.github/workflows/fetch_traffic.yml
@@ -2,7 +2,7 @@ name: Fetch Paris Traffic Data
 
 on:
   schedule:
-    - cron: "0 * * * *"   # 每小时运行
+    - cron: "0 0 * * *"   # 每jour运行
   workflow_dispatch:
 
 jobs:
